[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpdf2"
dynamic = ["version"]
description = "Simple & fast PDF generation for Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Olivier PLATHEY" },
  { name = "Max" }
]

maintainers = [
  { name = "Lucas Cimon" }
]

keywords = ["pdf", "unicode", "png", "jpg", "ttf", "barcode"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Printing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Presentation"
]

dependencies = [
  "defusedxml",
  "Pillow>=8.0.0,!=9.2.*",
  "fonttools>=4.34.0"
]

[project.urls]
Homepage = "https://py-pdf.github.io/fpdf2/"
Documentation = "https://py-pdf.github.io/fpdf2/"
Code = "https://github.com/py-pdf/fpdf2"
"Issue tracker" = "https://github.com/py-pdf/fpdf2/issues"

[tool.setuptools]
packages = ["fpdf"]

[tool.setuptools.package-data]
fpdf = [
  "data/color_profiles/*.icc",
  "data/color_profiles/*.LICENSE"
]

[tool.setuptools.dynamic]
version = { attr = "fpdf.__version__" }



[project.entry-points."mkdocs.plugins"]
check_toc = "docs.plugins.check_toc:CheckTocPlugin"

[tool.pytest.ini_options]
addopts = "--cov=fpdf --cov-report=xml"
log_cli = true
log_cli_level = "WARN"

[tool.flake8]
ignore = ["E203", "E221", "E241", "E251", "E701", "E731", "W503"]

# --- 🔧 Formatage automatique ---
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
